[gd_scene load_steps=13 format=2]

[ext_resource path="res://default_env.tres" type="Environment" id=1]
[ext_resource path="res://Scripts/UI/Minimap.gd" type="Script" id=2]
[ext_resource path="res://Scripts/UI/Speedometer.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/speedometer.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/game_ui.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/EngineHPMeter.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/CockpitHPMeter.png" type="Texture" id=8]
[ext_resource path="res://Scenes/UI/EndScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/UI/Fonts/Bangers-Regular-Font.tres" type="DynamicFont" id=10]
[ext_resource path="res://Scripts/StartCountdown.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenVB" type="VBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/ScreenVB"]
margin_right = 984.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="MarginContainer/ScreenVB/TopBar"]
margin_right = 325.0
margin_bottom = 184.0
size_flags_horizontal = 3

[node name="PositionLabel" type="RichTextLabel" parent="MarginContainer/ScreenVB/TopBar/Left"]
margin_right = 325.0
margin_bottom = 33.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "6/6"
text = "6/6"
fit_content_height = true
scroll_active = false

[node name="Mid" type="VBoxContainer" parent="MarginContainer/ScreenVB/TopBar"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 184.0
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/ScreenVB/TopBar/Mid"]
visible = false
margin_right = 325.0
margin_bottom = 66.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]2:00 [/center]
"
text = "2:00 
"
fit_content_height = true
scroll_active = false

[node name="Right" type="VBoxContainer" parent="MarginContainer/ScreenVB/TopBar"]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 184.0
size_flags_horizontal = 3

[node name="LapCounterLabel" type="RichTextLabel" parent="MarginContainer/ScreenVB/TopBar/Right"]
margin_right = 326.0
margin_bottom = 66.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[right]Lap 0/3 [/right]
"
text = "Lap 0/3 
"
fit_content_height = true
scroll_active = false

[node name="MidBar" type="HBoxContainer" parent="MarginContainer/ScreenVB"]
margin_top = 188.0
margin_right = 984.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="MarginContainer/ScreenVB/MidBar"]
margin_right = 325.0
margin_bottom = 184.0
size_flags_horizontal = 3
alignment = 1

[node name="Mid" type="VBoxContainer" parent="MarginContainer/ScreenVB/MidBar"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 184.0
size_flags_horizontal = 3

[node name="Right" type="VBoxContainer" parent="MarginContainer/ScreenVB/MidBar"]
margin_left = 658.0
margin_right = 984.0
margin_bottom = 184.0
size_flags_horizontal = 3

[node name="BotBar" type="HBoxContainer" parent="MarginContainer/ScreenVB"]
margin_top = 376.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Speedometer" type="Control" parent="MarginContainer/ScreenVB/BotBar"]
margin_right = 300.0
margin_bottom = 184.0
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="Stage1" type="TextureProgress" parent="MarginContainer/ScreenVB/BotBar/Speedometer"]
self_modulate = Color( 0, 0.427451, 1, 1 )
margin_top = 100.0
margin_right = 341.0
margin_bottom = 200.0
step = 0.1
value = 10.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stage2" type="TextureProgress" parent="MarginContainer/ScreenVB/BotBar/Speedometer"]
self_modulate = Color( 0.447059, 0, 1, 1 )
margin_left = 2.0
margin_top = 100.0
margin_right = 343.0
margin_bottom = 200.0
step = 0.1
texture_progress = ExtResource( 5 )

[node name="Stage3" type="TextureProgress" parent="MarginContainer/ScreenVB/BotBar/Speedometer"]
self_modulate = Color( 1, 0, 0.176471, 1 )
margin_left = 4.0
margin_top = 100.0
margin_right = 345.0
margin_bottom = 200.0
step = 0.1
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mid" type="VBoxContainer" parent="MarginContainer/ScreenVB/BotBar"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 184.0
size_flags_horizontal = 3

[node name="Minimap" type="VBoxContainer" parent="MarginContainer/ScreenVB/BotBar"]
margin_left = 608.0
margin_right = 908.0
margin_bottom = 184.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="MarginContainer/ScreenVB/BotBar/Minimap"]
size = Vector2( 200, 200 )

[node name="MiniMapCamera" type="Camera" parent="MarginContainer/ScreenVB/BotBar/Minimap/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 552, 0 )
environment = ExtResource( 1 )
current = true
fov = 116.6
size = 5.76
far = 1000.0

[node name="MapTexture" type="TextureRect" parent="MarginContainer/ScreenVB/BotBar/Minimap"]
visible = false
margin_right = 326.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScreenVB/BotBar"]
margin_left = 912.0
margin_right = 984.0
margin_bottom = 118.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ScreenVB/BotBar/VBoxContainer"]
margin_right = 72.0
margin_bottom = 71.0
alignment = 1

[node name="EngineHP" type="TextureProgress" parent="MarginContainer/ScreenVB/BotBar/VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 71.0
value = 100.0
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ScreenVB/BotBar/VBoxContainer"]
margin_top = 75.0
margin_right = 72.0
margin_bottom = 118.0
alignment = 1

[node name="CockpitHP" type="TextureProgress" parent="MarginContainer/ScreenVB/BotBar/VBoxContainer/HBoxContainer2"]
margin_left = 24.0
margin_right = 48.0
margin_bottom = 43.0
value = 100.0
texture_progress = ExtResource( 8 )
fill_mode = 3

[node name="StartCountdown" type="Control" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CDLabel" type="Label" parent="MarginContainer/StartCountdown"]
anchor_left = 0.4
anchor_top = 0.428
anchor_right = 0.558
anchor_bottom = 0.6
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreen" parent="." instance=ExtResource( 9 )]
visible = false
